--- a/terrier_study/templates/terrier_study/show_profile.html
+++ b/terrier_study/templates/terrier_study/show_profile.html
@@ -1,3 +1,10 @@
+<!-- 
+File: show_profile.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the template for the show_profile page of the terrier_study app.
+Shows a user's profile information and their favorite study rooms.
+-->
+
 {% extends "terrier_study/base.html" %}
 {% load static %}
 
