--- a/terrier_study/templates/terrier_study/update_profile_form.html
+++ b/terrier_study/templates/terrier_study/update_profile_form.html
@@ -38,7 +38,7 @@ Description: Update profile form for TerrierStudy.
                 Save Changes
             </button>
 
-            <!-- Back Button styled as button -->
+            <!-- Back Button -->
             <a href="{% url 'profile-detail' %}" class="primary-button">
                 Back
             </a>
