--- a/terrier_study/templates/terrier_study/delete_review_confirm.html
+++ b/terrier_study/templates/terrier_study/delete_review_confirm.html
@@ -1,3 +1,10 @@
+<!-- 
+File: delete_review_confirm.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the template for confirming the deletion of a review in the terrier_study app.
+-->
+
+
 {% extends "terrier_study/base.html" %}
 {% load static %}
 
@@ -8,6 +15,7 @@
     <h2>Delete Review</h2>
     <p>Are you sure you want to delete your review for <strong>{{ review.study_room.name }}</strong>?</p>
 
+    <!-- form to confirm deletion -->
     <form method="post">
         {% csrf_token %}
 
