--- a/terrier_study/templates/terrier_study/logged_out.html
+++ b/terrier_study/templates/terrier_study/logged_out.html
@@ -1,3 +1,9 @@
+<!-- 
+File: logged_out.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the template for the logged out page of the terrier_study app.
+-->
+
 {% extends "terrier_study/base.html" %}
 {% block content %}
 
